# yyiki

./: .gitignore  CLAUDE.md  LICENSE  README.md  default_settings_template.py  forms.py  manual_test.md  pyproject.toml  requirements.in  requirements.txt  settings.cfg.template  settings_template.py  test_fix.py  test_inline.py  test_security.py  utils.py  yyiki.py
.claude/: settings.local.json
static/: main.css  tufte.css
templates/: edit.html  home.html  layout.html  list.html  login.html  page.html  search.html
