[tool.poetry]
name = "yyiki"
version = "0.1.0"
description = "A minimal git-based wiki"
authors = ["YY Ahn <yongyeol@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bcrypt = ">=4.0.0"
Flask = ">=2.0.0"
fuzzywuzzy = "^0.18.0"
Flask-Bcrypt = ">=1.0.0"
Flask-FlatPages = ">=0.8.1"
Flask-Login = ">=0.5.0"
Flask-WTF = ">=1.0.0"
python-Levenshtein = "^0.12.0"
email-validator = "^1.1.2"
GitPython = "^3.1.41"
markdown-katex = "^202009.1026"
pymdown-extensions = "^10.0"
Markdown = "^3.3.3"
mdx-linkify = "^2.1"
markdown-headdown = "^0.1.3"
mdx-wikilink-plus = "^1.3.3"
Pygments = "^2.7.3"
python-markdown-math = "^0.8"
werkzeug = ">=2.3.8"

[tool.poetry.dev-dependencies]
black = "^24.3"
isort = "^5.7.0"
pynvim = "^0.4.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
