[project]
name = "yyiki"
version = "0.1.0"
description = "A minimal markdown-based flat page wiki system."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-flatpages>=0.8.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "fuzzywuzzy>=0.18.0",
    "gitpython>=3.1.44",
    "markdown>=3.8",
    "markdown-headdown>=0.1.3",
    "markdown-katex>=202406.1035",
    "mdx-linkify>=2.1",
    "mdx-wikilink-plus>=1.4.1",
    "pygments>=2.19.1",
    "python-levenshtein>=0.27.1",
    "python-markdown-math>=0.9",
    "ruff>=0.11.11",
    "werkzeug>=3.1.3",
]
